tests/baselines/reference/importHelpersNoHelpers.errors.txt
tests/cases/compiler/external.ts(1,1): error TS2343: This syntax requires an imported helper named '__exportStar' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/compiler/external.ts(3,16): error TS2343: This syntax requires an imported helper named '__extends' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/compiler/external.ts(7,1): error TS2343: This syntax requires an imported helper named '__decorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/compiler/external.ts(7,1): error TS2343: This syntax requires an imported helper named '__metadata' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/compiler/external.ts(9,12): error TS2343: This syntax requires an imported helper named '__param' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/compiler/external.ts(14,13): error TS2343: This syntax requires an imported helper named '__assign' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
tests/cases/compiler/external.ts(15,12): error TS2343: This syntax requires an imported helper named '__rest' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== tests/cases/compiler/external.ts (7 errors) ====
    export * from "./other";
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__exportStar' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    export class A { }
    export class B extends A { }
                   ~~~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__extends' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    
    declare var dec: any;
    
    @dec
    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__decorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__metadata' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    class C {
        method(@dec x: number) {
               ~~~~
!!! error TS2343: This syntax requires an imported helper named '__param' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
        }
    }
    
    const o = { a: 1 };
    const y = { ...o };
                ~~~~
!!! error TS2343: This syntax requires an imported helper named '__assign' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    const { ...x } = y;
               ~
!!! error TS2343: This syntax requires an imported helper named '__rest' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    
==== tests/cases/compiler/other.ts (0 errors) ====
    export const x = 1;
    
==== tests/cases/compiler/script.ts (0 errors) ====
    class A { }
    class B extends A { }
    
    declare var dec: any;
    
    @dec
    class C {
        method(@dec x: number) {
        }
    }
    
==== tests/cases/compiler/tslib.d.ts (0 errors) ====
    export {}
    